add oxygen/fuel/boost upgrade items, with 2 instances of each

--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -48,6 +48,9 @@
     { "code": 1734473718, "name": "Eject Button", "type": "useful" },
     { "code": 1734473719, "name": "Velocity Matcher", "type": "useful" },
     { "code": 1734473720, "name": "Surface Integrity Scanner", "type": "useful" },
+    { "code": 1734473729, "name": "Oxygen Capacity Upgrade", "type": "useful" },
+    { "code": 1734473730, "name": "Fuel Capacity Upgrade", "type": "useful" },
+    { "code": 1734473731, "name": "Boost Duration Upgrade", "type": "useful" },
 
     { "code": 1734473721, "name": "Oxygen Refill", "type": "filler" },
     { "code": 1734473722, "name": "Jetpack Fuel Refill", "type": "filler" },
