--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -27,16 +27,16 @@
     { "code": 1734473701, "name": "Esker's Signal", "type": "filler" },
     { "code": 1734473702, "name": "Riebeck's Signal", "type": "filler" },
     { "code": 1734473703, "name": "Gabbro's Signal", "type": "filler" },
-    { "code": 1734473704, "name": "Feldspar's Signal", "type": "filler" },
+    { "code": 1734473704, "name": "Feldspar's Signal", "type": "progression" },
     { "code": 1734473705, "name": "Museum Shard Signal", "type": "filler" },
     { "code": 1734473706, "name": "Grove Shard Signal", "type": "filler" },
     { "code": 1734473707, "name": "Cave Shard Signal", "type": "filler" },
     { "code": 1734473708, "name": "Tower Shard Signal", "type": "filler" },
     { "code": 1734473709, "name": "Island Shard Signal", "type": "filler" },
-    { "code": 1734473710, "name": "Quantum Moon Signal", "type": "filler" },
+    { "code": 1734473710, "name": "Quantum Moon Signal", "type": "useful" },
     { "code": 1734473711, "name": "Escape Pod 1 Signal", "type": "filler" },
     { "code": 1734473712, "name": "Escape Pod 2 Signal", "type": "filler" },
-    { "code": 1734473713, "name": "Escape Pod 3 Signal", "type": "filler" },
+    { "code": 1734473713, "name": "Escape Pod 3 Signal", "type": "progression" },
     { "code": 1734473714, "name": "Galena's Radio Signal", "type": "filler" },
     { "code": 1734473715, "name": "Tephra's Radio Signal", "type": "filler" },
 
